# DemoPlaywright

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_INSTRUCTIONS.md  AGENT_USAGE_GUIDE.md  CHEATSHEET.md  COMPLETE_BUNDLE.md  IMPLEMENTATION_GUIDE.md  README.md  RUFF_SETUP_GUIDE.md  agent-config.json  allure-categories.json  conftest.py  pyproject.toml  requirements-dev.txt
.github/workflows/: security.yml  tests.yml
src/: __init__.py  config.py  logging_config.py
src/api/: __init__.py  auth.py  base_client.py
src/models/: __init__.py  comment.py  post.py  user.py
src/pages/: __init__.py  base_page.py
src/pages/alerts/: alerts_page.py  browser_windows_page.py
src/pages/forms/: checkbox_page.py  radio_button_page.py  text_box_page.py
src/pages/widgets/: __init__.py  progress_bar_page.py  slider_page.py  tabs_page.py
src/plugins/: __init__.py  reporter_plugin.py
src/utils/: __init__.py  github_summary.py  logger.py  logging_config.py  notifier.py
tests/: __init__.py
tests/api/: __init__.py  conftest.py  test_auth.py  test_mocked_external.py  test_negative.py  test_users.py
tests/contract/: test_user_consumer.py  test_user_provider.py
tests/functional/: README.md  __init__.py  conftest.py  test_alerts.py  test_forms.py  test_widgets.py
